--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -40,7 +40,6 @@ jobs:
             !venv/
 
 
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -257,8 +256,8 @@ jobs:
             "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
             }
           ]'
-        # run: |
-        # export PYTHONPATH=$(pwd)
-        # coverage run -m pytest -v --show-capture=stdout
-        # coverage report -m --include=app.py,backend/*,tests/*
-        # coverage xml
+        run: |
+        export PYTHONPATH=$(pwd)
+        coverage run -m pytest -v --show-capture=stdout
+        coverage report -m --include=app.py,backend/*,tests/*
+        coverage xml
