--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Build Frontend
 
 on:
@@ -8,7 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
 
 jobs:
   build:
@@ -18,7 +14,7 @@ jobs:
         working-directory: frontend
     strategy:
       matrix:
-        node-version: [14, 16]
+        node-version: [14.x, 16.x]  # Use x to get the latest minor version
 
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +23,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
-    - run: npm ci
-    - run: NODE_OPTIONS=--max_old_space_size=8192 npm run build --if-present
-    - run: npm run test --if-present
+        cache-dependency-path: 'frontend/package-lock.json'
+    - name: Install dependencies
+      run: npm ci
+    - name: Build project
+      run: npm run build --if-present
+      env:
+        NODE_OPTIONS: --max_old_space_size=8192
+    - name: Run tests
+      run: npm test --if-present
