--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,25 +45,29 @@ jobs:
     defaults:
       run:
         working-directory: frontend
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16'
         cache: 'npm'
         cache-dependency-path: 'frontend/package-lock.json'
+
     - name: Clear npm cache
       run: npm cache clean --force
+
     - name: Install dependencies
-      run: npm install --verbose
+      run: |
+        npm install --save-dev @fluentui/react
+        npm install --verbose
+
     - name: Build project
       run: npm run build --if-present
       env:
         NODE_OPTIONS: --max_old_space_size=8192
+
     - name: Run tests
       run: npm test --if-present
