--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -2,52 +2,11 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+
 
 jobs:
-  build-frontend:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'npm'
-        cache-dependency-path: 'frontend/package-lock.json'
-
-    - name: Clear npm cache
-      run: npm cache clean --force
-
-    - name: Install dependencies
-      run: |
-        npm install --save-dev @fluentui/react
-        npm install --verbose
-
-    - name: Build project
-      run: npm run build --if-present
-      env:
-        NODE_OPTIONS: --max_old_space_size=8192
-
-    - name: Run tests
-      run: npm test --if-present
-
-    - name: Zip frontend artifact
-      run: zip -r frontend-build.zip build
-
-    - name: Upload frontend build
-      uses: actions/upload-artifact@v3
-      with:
-        name: frontend-build
-        path: frontend-build.zip
-
   build-backend:
     runs-on: ubuntu-latest
 
@@ -67,7 +26,8 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-        
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -79,12 +39,44 @@ jobs:
             release.zip
             !venv/
 
+  build-frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
+      - name: Clear npm cache
+        run: npm cache clean --force
+      - name: Install dependencies
+        run: |
+          npm install --save-dev @fluentui/react
+          npm install --verbose
+      - name: Build project
+        run: npm run build --if-present
+        env:
+          NODE_OPTIONS: --max_old_space_size=8192
+      - name: Run tests
+        run: npm test --if-present
+      - name: Upload frontend artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-build
+          path: frontend/build            
+
+
   deploy:
     runs-on: ubuntu-latest
-    needs: [build-frontend, build-backend]
+    needs: [build-backend, build-frontend]
 
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
       contents: read
 
     steps:
@@ -97,21 +89,13 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: frontend-build
+          path: frontend-build
 
-      - name: Unzip artifacts
+      - name: Unzip artifact for deployment
         run: |
-          unzip release.zip -d backend
-          unzip frontend-build.zip -d frontend
-
-      - name: Combine frontend and backend
-        run: |
-          mkdir -p backend/static
-          cp -R frontend/build/* backend/static/
-
-      - name: Zip combined artifact
-        run: |
-          cd backend
-          zip -r ../combined-release.zip .
+          unzip release.zip
+          mkdir -p frontend
+          mv frontend-build frontend/build
 
       - name: Azure Login
         uses: azure/login@v1
@@ -126,8 +110,13 @@ jobs:
         with:
           app-name: ${{ vars.WEBAPP_NAME_TEST }}
           resource-group-name: ${{ vars.RESOURCE_GROUP_TEST }}
-          package: combined-release.zip
+          slot-name: production
 
+
+      - name: Copy frontend files
+        run: |
+          cp -R frontend/build/* ${{ vars.WEBAPP_NAME_TEST }}/wwwroot/
+                
       - name: Set App Settings
         uses: azure/appservice-settings@v1
         with:
@@ -270,43 +259,49 @@ jobs:
               "value": "${{ vars.AZURE_OPENAI_RESOURCE_TEST }}"
             },
             {
-              "name": "AZURE_OPENAI_ENDPOINT",
-              "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
+            "name": "AZURE_OPENAI_ENDPOINT",
+            "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
             },
             {
-              "name": "AZURE_OPENAI_EMBEDDING_NAME",
-              "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
+            "name": "AZURE_OPENAI_EMBEDDING_NAME",
+            "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
             },
             {
-              "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
-              "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
+            "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
+            "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
             },
             {
-              "name": "AZURE_OPENAI_EMBEDDING_KEY",
-              "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
+            "name": "AZURE_OPENAI_EMBEDDING_KEY",
+            "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
             },
             {
-              "name": "AZURE_SEARCH_SERVICE",
-              "value": "${{ vars.AZURE_SEARCH_SERVICE_TEST }}"
+            "name": "AZURE_SEARCH_SERVICE",
+            "value": "${{ vars.AZURE_SEARCH_SERVICE_TEST }}"
             },
             {
-              "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-              "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+            "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+            "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
             },
             {
-              "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
-              "value": "https://${{ vars.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
+            "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
+            "value": "https://${{ vars.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
             },
             {
-              "name": "AZURE_SEARCH_INDEX",
-              "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
+            "name": "AZURE_SEARCH_INDEX",
+            "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
             },
             {
-              "name": "AZURE_SEARCH_KEY",
-              "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
+            "name": "AZURE_SEARCH_KEY",
+            "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
             },
             {
-              "name": "AZURE_OPENAI_KEY",
-              "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
+            "name": "AZURE_OPENAI_KEY",
+            "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
             }
           ]'
+      # - name: Run tests and generate coverage report
+      #   run: |
+      #     export PYTHONPATH=$(pwd)
+      #     coverage run -m pytest -v --show-capture=stdout
+      #     coverage report -m --include=app.py,backend/*,tests/*
+      #     coverage xml
