--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -67,8 +67,8 @@ jobs:
       - name: Upload frontend artifact
         uses: actions/upload-artifact@v3
         with:
-          name: frontend-build
-          path: frontend/build            
+          name: frontend-artifact
+          path: build       
 
 
   deploy:
@@ -88,7 +88,7 @@ jobs:
       - name: Download frontend artifact
         uses: actions/download-artifact@v3
         with:
-          name: frontend-build
+          name: frontend-artifact
           path: frontend-build
 
       - name: Unzip artifact for deployment
