--- a/.github/workflow-in-progress/cicd-pipeline.yml
+++ b/.github/workflow-in-progress/cicd-pipeline.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          pip install httpx
 
       - name: Install frontend dependencies
         working-directory: frontend
