--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'prod'
+      name: 'test'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     permissions:
