--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'test'
+      name: 'prod'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     permissions:
