fix: make frontend build and app deploy

--- a/azure.yaml
+++ b/azure.yaml
@@ -12,12 +12,20 @@ services:
       prepackage:
         windows:
           shell: pwsh
-          run:  cd ./frontend;npm install;npm run build
+          run: |
+            cd ./frontend
+            npm install
+            $env:NODE_OPTIONS="--max_old_space_size=8192"
+            npm run build
           interactive: true
           continueOnError: false
         posix:
           shell: sh
-          run:  cd ./frontend;npm install;npm run build
+          run: |
+            cd ./frontend
+            npm install
+            export NODE_OPTIONS=--max_old_space_size=8192
+            npm run build
           interactive: true
           continueOnError: false
 hooks:
@@ -35,11 +43,17 @@ hooks:
     postprovision:
       windows:
         shell: pwsh
-        run: ./scripts/auth_update.ps1;./scripts/prepdocs.ps1;
+        run: |
+          $env:FLAG_AOAI="V2"
+          ./scripts/auth_update.ps1
+          ./scripts/prepdocs.ps1
         interactive: true
         continueOnError: false
       posix:
         shell: sh
-        run: ./scripts/auth_update.sh;./scripts/prepdocs.sh;
+        run: |
+          export FLAG_AOAI="V2"
+          ./scripts/auth_update.sh
+          ./scripts/prepdocs.sh
         interactive: true
         continueOnError: false
