--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -71,6 +71,11 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Set Startup Command
+        run: |
+          az webapp config set --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --startup-file "python3 -m gunicorn app:app"
+        
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
@@ -109,10 +114,10 @@ jobs:
               "name": "AZURE_OPENAI_STREAM",
               "value": "True"
             },
-            # {
-            #   "name": "UI_FAVICON",
-            #   "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
-            # },
+            {
+              "name": "UI_FAVICON",
+              "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
+            },
             {
               "name": "AZURE_COSMOSDB_DATABASE",
               "value": "db_conversation_history"
