--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ azure-search-documents==11.4.0b6
 azure-storage-blob==12.17.0
 python-dotenv==1.0.0
 azure-cosmos==4.5.0
-quart==0.19.4
+Quart==0.19.6
 uvicorn==0.24.0
 aiohttp==3.9.2
-gunicorn==20.1.0
+gunicorn==22.0.0
 pydantic-settings==2.2.1
 httpx==0.27.0
