--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -114,10 +114,10 @@ jobs:
               "name": "AZURE_OPENAI_STREAM",
               "value": "True"
             },
-            {
-              "name": "UI_FAVICON",
-              "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
-            },
+            # {
+            #   "name": "UI_FAVICON",
+            #   "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
+            # },
             {
               "name": "AZURE_COSMOSDB_DATABASE",
               "value": "db_conversation_history"
@@ -246,10 +246,10 @@ jobs:
             "name": "AZURE_SEARCH_SERVICE",
             "value": "${{ vars.AZURE_SEARCH_SERVICE }}"
             },
-            {
-            "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-            "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
-            },
+            # {
+            # "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+            # "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+            # },
             {
             "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
             "value": "https://${{ vars.AZURE_SEARCH_SERVICE }}.search.windows.net"
