--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,7 +39,6 @@ jobs:
           path: |
             release.zip
             !venv/
-
 
   deploy:
     runs-on: ubuntu-latest
@@ -234,36 +231,36 @@ jobs:
             "name": "AZURE_OPENAI_EMBEDDING_NAME",
             "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
             },
-            {
-            "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
-            "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
-            },
-            {
-            "name": "AZURE_OPENAI_EMBEDDING_KEY",
-            "value": "${{ secrets.AZURE_OPENAI_KEY }}"
-            },
-            {
-            "name": "AZURE_SEARCH_SERVICE",
-            "value": "${{ vars.AZURE_SEARCH_SERVICE }}"
-            },
+            # {
+            # "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
+            # "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
+            # },
+            # {
+            # "name": "AZURE_OPENAI_EMBEDDING_KEY",
+            # "value": "${{ secrets.AZURE_OPENAI_KEY }}"
+            # },
+            # {
+            # "name": "AZURE_SEARCH_SERVICE",
+            # "value": "${{ vars.AZURE_SEARCH_SERVICE }}"
+            # },
             # {
             # "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
             # "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
             # },
-            {
-            "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
-            "value": "https://${{ vars.AZURE_SEARCH_SERVICE }}.search.windows.net"
-            },
-            {
-            "name": "AZURE_SEARCH_INDEX",
-            "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
-            },
-            {
-            "name": "AZURE_SEARCH_KEY",
-            "value": "${{ secrets.AZURE_SEARCH_KEY }}"
-            },
-            {
-            "name": "AZURE_OPENAI_KEY",
-            "value": "${{ secrets.AZURE_OPENAI_KEY }}"
-            }
+            # {
+            # "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
+            # "value": "https://${{ vars.AZURE_SEARCH_SERVICE }}.search.windows.net"
+            # },
+            # {
+            # "name": "AZURE_SEARCH_INDEX",
+            # "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
+            # },
+            # {
+            # "name": "AZURE_SEARCH_KEY",
+            # "value": "${{ secrets.AZURE_SEARCH_KEY }}"
+            # },
+            # {
+            # "name": "AZURE_OPENAI_KEY",
+            # "value": "${{ secrets.AZURE_OPENAI_KEY }}"
+            # }
           ]'
