--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'prod'
+      name: 'test'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     permissions:
@@ -99,169 +99,169 @@ jobs:
               "name": "AZURE_OPENAI_TOP_P",
               "value": "0"
             }
-            #   ,
-            # {
-            #   "name": "AZURE_OPENAI_MAX_TOKENS",
-            #   "value": "800"
-            # },
-            # {
-            #   "name": "AZURE_OPENAI_PREVIEW_API_VERSION",
-            #   "value": "2024-05-01-preview"
-            # },
-            # {
-            #   "name": "AZURE_OPENAI_STREAM",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "UI_FAVICON",
-            #   "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
-            # },
-            # {
-            #   "name": "AZURE_COSMOSDB_DATABASE",
-            #   "value": "db_conversation_history"
-            # },
-            # {
-            #   "name": "AZURE_COSMOSDB_CONVERSATIONS_CONTAINER",
-            #   "value": "conversations"
-            # },
-            # {
-            #   "name": "DATASOURCE_TYPE",
-            #   "value": "AzureCognitiveSearch"
-            # },
-            # {
-            #   "name": "SEARCH_TOP_K",
-            #   "value": "5"
-            # },
-            # {
-            #   "name": "SEARCH_STRICTNESS",
-            #   "value": "3"
-            # },
-            # {
-            #   "name": "SEARCH_ENABLE_IN_DOMAIN",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_USE_SEMANTIC_SEARCH",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG",
-            #   "value": "my-semantic-config"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_INDEX_IS_PRECHUNKED",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_TOP_K",
-            #   "value": "5"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_ENABLE_IN_DOMAIN",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_CONTENT_COLUMNS",
-            #   "value": "chunk"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_FILENAME_COLUMN",
-            #   "value": "chunk_id"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_TITLE_COLUMN",
-            #   "value": "title"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_VECTOR_COLUMNS",
-            #   "value": "vector"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_QUERY_TYPE",
-            #   "value": "vectorSemanticHybrid"
-            # },
-            # {
-            #   "name": "AZURE_SEARCH_STRICTNESS",
-            #   "value": "3"
-            # },
-            # {
-            #   "name": "ELASTICSEARCH_TOP_K",
-            #   "value": "5"
-            # },
-            # {
-            #   "name": "ELASTICSEARCH_ENABLE_IN_DOMAIN",
-            #   "value": "True"
-            # },
-            # {
-            #   "name": "ELASTICSEARCH_STRICTNESS",
-            #   "value": "3"
-            # },
-            # {
-            #   "name": "USE_PROMPTFLOW",
-            #   "value": "False"
-            # },
-            # {
-            #   "name": "PROMPTFLOW_RESPONSE_TIMEOUT",
-            #   "value": "120"
-            # },
-            # {
-            #   "name": "PROMPTFLOW_REQUEST_FIELD_NAME",
-            #   "value": "question"
-            # },
-            # {
-            #   "name": "PROMPTFLOW_RESPONSE_FIELD_NAME",
-            #   "value": "answer"
-            # },
-            # {
-            #   "name": "AZURE_OPENAI_MODEL",
-            #   "value": "${{ vars.AZURE_OPENAI_MODEL }}"
-            # },
-            # {
-            #   "name": "AZURE_OPENAI_MODEL_NAME",
-            #   "value": "${{ vars.AZURE_OPENAI_MODEL }}"
-            # },
-            # {
-            #   "name": "AZURE_OPENAI_RESOURCE",
-            #   "value": "${{ vars.AZURE_OPENAI_RESOURCE }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_ENDPOINT",
-            # "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_EMBEDDING_NAME",
-            # "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
-            # "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_EMBEDDING_KEY",
-            # "value": "${{ secrets.AZURE_OPENAI_KEY }}"
-            # },
-            # {
-            # "name": "AZURE_SEARCH_SERVICE",
-            # "value": "${{ vars.AZURE_SEARCH_SERVICE }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-            # "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
-            # },
-            # {
-            # "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
-            # "value": "https://${{ vars.AZURE_SEARCH_SERVICE }}.search.windows.net"
-            # },
-            # {
-            # "name": "AZURE_SEARCH_INDEX",
-            # "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
-            # },
-            # {
-            # "name": "AZURE_SEARCH_KEY",
-            # "value": "${{ secrets.AZURE_SEARCH_KEY }}"
-            # },
-            # {
-            # "name": "AZURE_OPENAI_KEY",
-            # "value": "${{ secrets.AZURE_OPENAI_KEY }}"
-            # }
+              ,
+            {
+              "name": "AZURE_OPENAI_MAX_TOKENS",
+              "value": "800"
+            },
+            {
+              "name": "AZURE_OPENAI_PREVIEW_API_VERSION",
+              "value": "2024-05-01-preview"
+            },
+            {
+              "name": "AZURE_OPENAI_STREAM",
+              "value": "True"
+            },
+            {
+              "name": "UI_FAVICON",
+              "value": "https://raw.githubusercontent.com/leroy-seafood/lsg-ml-hr-chat/5df64c36ce997073cef0f772e8f4ebd155f48025/frontend/src/assets/Leroy.svg"
+            },
+            {
+              "name": "AZURE_COSMOSDB_DATABASE",
+              "value": "db_conversation_history"
+            },
+            {
+              "name": "AZURE_COSMOSDB_CONVERSATIONS_CONTAINER",
+              "value": "conversations"
+            },
+            {
+              "name": "DATASOURCE_TYPE",
+              "value": "AzureCognitiveSearch"
+            },
+            {
+              "name": "SEARCH_TOP_K",
+              "value": "5"
+            },
+            {
+              "name": "SEARCH_STRICTNESS",
+              "value": "3"
+            },
+            {
+              "name": "SEARCH_ENABLE_IN_DOMAIN",
+              "value": "True"
+            },
+            {
+              "name": "AZURE_SEARCH_USE_SEMANTIC_SEARCH",
+              "value": "True"
+            },
+            {
+              "name": "AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG",
+              "value": "my-semantic-config"
+            },
+            {
+              "name": "AZURE_SEARCH_INDEX_IS_PRECHUNKED",
+              "value": "True"
+            },
+            {
+              "name": "AZURE_SEARCH_TOP_K",
+              "value": "5"
+            },
+            {
+              "name": "AZURE_SEARCH_ENABLE_IN_DOMAIN",
+              "value": "True"
+            },
+            {
+              "name": "AZURE_SEARCH_CONTENT_COLUMNS",
+              "value": "chunk"
+            },
+            {
+              "name": "AZURE_SEARCH_FILENAME_COLUMN",
+              "value": "chunk_id"
+            },
+            {
+              "name": "AZURE_SEARCH_TITLE_COLUMN",
+              "value": "title"
+            },
+            {
+              "name": "AZURE_SEARCH_VECTOR_COLUMNS",
+              "value": "vector"
+            },
+            {
+              "name": "AZURE_SEARCH_QUERY_TYPE",
+              "value": "vectorSemanticHybrid"
+            },
+            {
+              "name": "AZURE_SEARCH_STRICTNESS",
+              "value": "3"
+            },
+            {
+              "name": "ELASTICSEARCH_TOP_K",
+              "value": "5"
+            },
+            {
+              "name": "ELASTICSEARCH_ENABLE_IN_DOMAIN",
+              "value": "True"
+            },
+            {
+              "name": "ELASTICSEARCH_STRICTNESS",
+              "value": "3"
+            },
+            {
+              "name": "USE_PROMPTFLOW",
+              "value": "False"
+            },
+            {
+              "name": "PROMPTFLOW_RESPONSE_TIMEOUT",
+              "value": "120"
+            },
+            {
+              "name": "PROMPTFLOW_REQUEST_FIELD_NAME",
+              "value": "question"
+            },
+            {
+              "name": "PROMPTFLOW_RESPONSE_FIELD_NAME",
+              "value": "answer"
+            },
+            {
+              "name": "AZURE_OPENAI_MODEL",
+              "value": "${{ vars.AZURE_OPENAI_MODEL }}"
+            },
+            {
+              "name": "AZURE_OPENAI_MODEL_NAME",
+              "value": "${{ vars.AZURE_OPENAI_MODEL }}"
+            },
+            {
+              "name": "AZURE_OPENAI_RESOURCE",
+              "value": "${{ vars.AZURE_OPENAI_RESOURCE }}"
+            },
+            {
+            "name": "AZURE_OPENAI_ENDPOINT",
+            "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
+            },
+            {
+            "name": "AZURE_OPENAI_EMBEDDING_NAME",
+            "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
+            },
+            {
+            "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
+            "value": "${{ vars.AZURE_OPENAI_ENDPOINT }}"
+            },
+            {
+            "name": "AZURE_OPENAI_EMBEDDING_KEY",
+            "value": "${{ secrets.AZURE_OPENAI_KEY }}"
+            },
+            {
+            "name": "AZURE_SEARCH_SERVICE",
+            "value": "${{ vars.AZURE_SEARCH_SERVICE }}"
+            },
+            {
+            "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+            "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+            },
+            {
+            "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
+            "value": "https://${{ vars.AZURE_SEARCH_SERVICE }}.search.windows.net"
+            },
+            {
+            "name": "AZURE_SEARCH_INDEX",
+            "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
+            },
+            {
+            "name": "AZURE_SEARCH_KEY",
+            "value": "${{ secrets.AZURE_SEARCH_KEY }}"
+            },
+            {
+            "name": "AZURE_OPENAI_KEY",
+            "value": "${{ secrets.AZURE_OPENAI_KEY }}"
+            }
           ]'
