--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,26 @@
       "console": "integratedTerminal",
       "justMyCode": false,
       "envFile": "${workspaceFolder}/.env",
+  },    
+  {
+      "name": "Python: Sample App Backend - watcher",
+      "type": "python",
+      "request": "launch",
+      "module": "quart",
+      "cwd": "${workspaceFolder}",
+      "env": {
+          "QUART_APP": "app:app",
+          "QUART_ENV": "development",
+          "QUART_DEBUG": "0"
+      },
+      "args": [
+          "run",
+          "--reload",
+          "-p 50505"
+      ],
+      "console": "integratedTerminal",
+      "justMyCode": false,
+      "envFile": "${workspaceFolder}/.env",
   }
   ]
 }
