--- a/.github/workflows/sample-app-github-cd.yml
+++ b/.github/workflows/sample-app-github-cd.yml
@@ -30,6 +30,9 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Install react-query
+        run: npm install react-query @types/react-query
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
