--- a/.github/workflows/sample-app-github-cd.yml
+++ b/.github/workflows/sample-app-github-cd.yml
@@ -29,9 +29,17 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
-       
+        run: pip install -r requirements.txt   
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Install react-query
+        run: npm install react-query @types/react-query
+
+      - name: Build project
+        run: npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
