--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.6.0",
+    "react-query": "^3.0.0",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-uuid": "^2.0.0",
@@ -45,6 +46,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-plotly.js": "^2.6.3",
+    "@types/react-query": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
