--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+
+    - name: Create and start virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -32,6 +38,7 @@ jobs:
         AZURE_OPENAI_MODEL: ${{ secrets.AZUREOPENAIMODEL }}
         AZURE_OPENAI_KEY: ${{ secrets.AZUREOPENAIKEY }}
         AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZUREOPENAIEMBEDDINGNAME }}
+        AZURE_OPENAI_TEMPERATURE: ${{ secrets.AZUREOPENAITEMPERATURE }}
         AZURE_COSMOSDB_ACCOUNT: ${{ secrets.AZURECOSMOSDBACCOUNT }}
         AZURE_COSMOSDB_DATABASE: ${{ secrets.AZURECOSMOSDBDATABASE }}
         AZURE_COSMOSDB_CONVERSATIONS_CONTAINER: ${{ secrets.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
@@ -73,6 +80,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+
+    - name: Create and start virtual environment
+      run: |
+        python -m venv venv
+        venv\Scripts\Activate        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
