--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,7 @@ jobs:
         AZURE_OPENAI_MODEL: ${{ secrets.AZUREOPENAIMODEL }}
         AZURE_OPENAI_KEY: ${{ secrets.AZUREOPENAIKEY }}
         AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZUREOPENAIEMBEDDINGNAME }}
-        AZURE_OPENAI_TEMPERATURE: 0
+        AZURE_OPENAI_TEMPERATURE: ${{ secrets.AZUREOPENAITEMPERATURE }}
         AZURE_COSMOSDB_ACCOUNT: ${{ secrets.AZURECOSMOSDBACCOUNT }}
         AZURE_COSMOSDB_DATABASE: ${{ secrets.AZURECOSMOSDBDATABASE }}
         AZURE_COSMOSDB_CONVERSATIONS_CONTAINER: ${{ secrets.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
