--- a/.env.sample
+++ b/.env.sample
@@ -17,6 +17,7 @@ AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
 UI_TITLE=
+UI_HUGO_URL=
 UI_LOGO=
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=
