--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "scripts": {
+    "build": "tsc" 
+  },
   "dependencies": {
-    "@types/axios": "^0.9.36",
+    "@types/axios": "^0.21.1",
     "axios": "^1.7.2"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "typescript": "^4.1.3"
   }
 }
