--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -13,19 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Node.js ${{ matrix.node-version }}
+    
+    - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '14'
 
     - name: Install dependencies
       run: npm install
 
     - name: Build the project
       run: npm run build
-
-    - name: Run tests
-      run: npm test
       
     - name: Build the Docker image
       run:         
