--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
   "scripts": {
-    "build": "tsc" 
+    "build": "tsc"
   },
   "dependencies": {
-    "@types/axios": "^0.21.1",
     "axios": "^1.7.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.5.4"
   }
 }
