--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -21,9 +21,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./frontend
 
     - name: Build the project
       run: npm run build
+      working-directory: ./frontend
       
     - name: Build the Docker image
       run:         
