--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "axios": "^1.7.2",
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,7 +40,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.12",
-    "@types/lodash-es": "^4.17.12",
+    "@types/lodash": "^4.17.7",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.0.27",
@@ -54,22 +53,16 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.0.0",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "react-test-renderer": "^18.2.0",
     "string.prototype.replaceall": "^1.0.10",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.5"
   }
