--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    # Set up Python for backend
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install Python dependencies
+      working-directory: backend
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt       
+        
+    - name: Run backend tests
+      working-directory: backend
+      run: |
+        # Commands to run your backend tests
+        pytest tests  # Adjust as necessary        
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
