--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install Python dependencies
+      working-directory: .
       run: |
         pip install -r requirements.txt       
         
